# jsa-demo-app

./: .gitignore  .gitmodules  Esempio d'uso  install.sh  run.sh
client/: nuxt.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/app/: app.config.ts  app.vue
client/app/assets/: main.css
client/app/components/: FolderTree.vue  Footer.vue  JsonTable.vue  MainMenu.vue  ModalQuestion.vue  ModelModal.vue  Number.vue  Sorted.vue  ThemeToggle.vue
client/app/components/FileSystem/: TreeNode.vue
client/app/components/jsalchemy-forms/: ModelForm.vue  VueForm.vue  VueModel.vue
client/app/components/jsalchemy-forms/fields/: ArrayField.vue  BooleanField.vue  CharField.vue  ChoiceField.vue  DateField.vue  DateTimeField.vue  FloatField.vue  IntegerField.vue  IntervalField.vue  MultiReferenceField.vue  ObjectField.vue  ReferenceField.vue  RichTextField.vue  StringField.vue  WidgetBase.vue  manyField.vue
client/app/components/jsalchemy-forms/layouts/: DefaultLayout.vue  MinimalLayout.vue  ModalLayout.vue
client/app/composables/: JSAlchemy.ts  MainTests.ts  modelmodal.ts  question.ts  theme.ts
client/app/layouts/: LeftMenu.vue  default.vue
client/app/pages/: Cars.vue  Invoices.vue  Login.vue  Profile.vue  Register.vue  Test.vue  TodoBasic.vue  TodoDoubleSided.vue  TodoFiltered.vue  TodoForm.vue  TodoPaginated.vue  TodoSorted.vue  index.vue  tests.vue  todos.vue
client/app/pages/file-system/: MountPoints.vue
client/app/pages/invoices/: Invoices.vue  Providers.vue  [id].vue  newInvoice.vue
client/app/pages/invoices/providers/: [id].vue
client/app/pages/todoFiltered/: [initialFilter].vue
server/: config.py  config.yaml  logging.yaml  main.py  pyproject.toml
server/cli/: __init__.py  base.py  db.py  utils.py  web.py
server/fixtures/: file-system.yaml  invoices.yaml
server/modules/: __init__.py
server/modules/apitest/: models.py  resources.py
server/modules/base/: __init__.py  auth.py  dblog.py
server/modules/cars/: models.py  resources.py
server/modules/invoices/: models.py  resources.py
server/modules/todos/: models.py  resources.py
server/scripts/: env.py
server/web/: blacksheep.py
