[project]
name = "jsa-demo-app"
version = "0.0.1"
description = "This application showcases the main features of JSAlchemy"
authors = [{ name = "Giuseppe Di Bona", email = "giusedb@gmail.com" }]
requires-python = ">=3.11,<4"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "sqlalchemy-js-authentication>=0.1.0,<0.2",
    "sqlalchemy-js-api>=0.1.0,<0.2",
    "sqlalchemy-js-authorization>=0.1.0,<0.2",
    "click>=8.1.7,<9",
    "pytest>=8.3.3,<9",
    "fastapi>=0.115.5,<0.116",
    "uvicorn>=0.32.1,<0.33",
    "alembic>=1.14.0,<2",
    "sqlalchemy[asyncio]>=2.0.36,<3",
    "pyyaml>=6.0.2,<7",
    "aiosqlite>=0.20.0,<0.21",
    "trio>=0.27.0,<0.28",
    "asyncpg>=0.30.0,<0.31",
    "aiohttp>=3.11.11,<4",
    "pytest-mock>=3.14.0,<4",
    "blacksheep[full]>=2.0.8,<3",
    "pluralizer>=1.2.0,<2",
    "psycopg2>=2.9.10,<3",
    "psycopg2-binary>=2.9.10,<3",
    "orjson>=3.11.1,<4",
    "fakeredis>=2.32.0,<3",
    "aiofile>=3.9.0,<4",
]

[dependency-groups]
local = [
    "sqlalchemy-js-authentication",
    "sqlalchemy-js-authorization",
    "sqlalchemy-js-api",
    "sqlalchemy-js-web-context",
]
dev = [
    "ipython>=8.20.0,<9",
    "pylint>=3.3.1,<4",
    "requests>=2.32.3,<3",
    "python-lsp-server[all]>=1.12.0,<2",
]
perhaps = ["wrapt>=1.17.1,<2"]

[tool.uv]
package = false
default-groups = [
    "local",
    "dev",
    "perhaps",
]

[tool.uv.sources]
sqlalchemy-js-authentication = { path = "../libs/jsa-authentication", editable = true }
sqlalchemy-js-authorization = { path = "../libs/jsa-authorization", editable = true }
sqlalchemy-js-api = { path = "../libs/jsa-api", editable = true }
sqlalchemy-js-web-context = { path = "../libs/jsa-context", editable = true }

[build-system]
requires = ["uv_build>=0.9.17,<0.10.0"]
build-backend = "uv_build"

[tool.poe.tasks]
test = "pytest"
tapp.script = "cli:main_cli"
